# cute

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cute.h  example.c
.github/workflows/: format.yml  test.yml
include/: cute.h
